# AlphaGomoku

./: CMakeLists.txt  README.md  README.txt  perflog.txt
Datasets/HumanExamples/: DatasetCreator.ipynb  DatasetCreator.py
Datasets/HumanExamples/GeneratedDatasets/: Info.md  Info.txt
Datasets/HumanExamples/RenjunetDatasets/: Info.md
Datasets/Selfplay/: info.md
Datasets/Selfplay/Datapoints/: info.md
Models/AlphaGomokuModels/: info.md  info.txt
Models/Architectures/: FirstOnlyPolicy.txt  FirstPolicyAndValue.txt  PolicyModel.txt  PolicyValueModel.txt
Models/Human/: info.md
Models/Human/PolHead/: info.md
Models/Human/ResNet/: info.md
Models/Human/ValHead/: info.md
Models/HumanModels/: info.txt
Models/scripted/: info.md
Trees/: info.md
libtorch/: info.md
src/: Batcher.cpp  Batcher.h  Config.cpp  Config.h  Controller.cpp  Datapoint.h  Environment.cpp  Environment.h  Gamestate.cpp  Gamestate.h  GomokuMCTS.cpp  Includes.h  Log.cpp  Log.h  MCTS.cpp  Main.cpp  Model.cpp  Model.h  ModelConverter.ipynb  ModelTester.ipynb  Module.h  Node.cpp  Node.h  NodeData.h  Selfplay.cpp  State.cpp  State.h  Storage.cpp  Storage.h  Style.cpp  Style.h  TorchTesting.cpp  Train.ipynb  Tree.cpp  Tree.h  TreeVisualizer.cpp  TreeVisualizer.h  Types.h  Utilities.h
src/Notebooks/: DatasetCreator.ipynb  DatasetCreatorLegacy.ipynb  GamestateTranslationTrain.ipynb  ModelConverter.ipynb  ModelTester.ipynb  Train.ipynb  Utilities.py
src/Python/: Autotrain.py  Config.py  DatasetCreator.py  Model.py  ModelConverter.ipynb  ModelTester.ipynb  NeuralNet.py  ResnetTrain.ipynb  Train.ipynb  Utilities.py  ValueTrain.ipynb
(+6 files in other folders)
